# static

./: CMakeLists.txt  Static.idb
sourses/: main.c
